--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Login de Usuarios</title>
   <link href="css/login.css" rel="stylesheet" type="text/css" />
   <script src="https://kit.fontawesome.com/a076d05399.js"></script>
-  <script type="text/javascript" src="js/login.js"></script>
+  <script type="text/javascript" src="login.js"></script>
 </head>
 
 <body> 
